Source/WebCore/Modules/indexeddb/IDBTransaction.cpp
@@ -74,8 +74,10 @@ IDBTransaction::IDBTransaction(IDBDatabase& database, const IDBTransactionInfo& 
     : IDBActiveDOMObject(database.scriptExecutionContext())
     , m_database(database)
     , m_info(info)
-    , m_operationTimer(*this, &IDBTransaction::operationTimerFired)
+    , m_pendingOperationTimer(*this, &IDBTransaction::pendingOperationTimerFired)
+    , m_completedOperationTimer(*this, &IDBTransaction::completedOperationTimerFired)
     , m_openDBRequest(request)
+    , m_currentlyCompletingRequest(request)
 
 {
     LOG(IndexedDB, "IDBTransaction::IDBTransaction - %s", m_info.loggingString().utf8().data());
@@ -244,7 +246,7 @@ void IDBTransaction::internalAbort()
 
     transitionedToFinishing(IndexedDB::TransactionState::Aborting);
     
-    m_abortQueue.swap(m_transactionOperationQueue);
+    m_abortQueue.swap(m_pendingTransactionOperationQueue);
 
     scheduleOperation(IDBClient::createTransactionOperation(*this, nullptr, &IDBTransaction::abortOnServerAndCancelRequests));
 }
@@ -253,19 +255,23 @@ void IDBTransaction::abortOnServerAndCancelRequests(IDBClient::TransactionOperat
 {
     LOG(IndexedDB, "IDBTransaction::abortOnServerAndCancelRequests");
     ASSERT(currentThread() == m_database->originThreadID());
-    ASSERT(m_transactionOperationQueue.isEmpty());
+    ASSERT(m_pendingTransactionOperationQueue.isEmpty());
 
     m_database->connectionProxy().abortTransaction(*this);
 
     ASSERT(m_transactionOperationMap.contains(operation.identifier()));
     m_transactionOperationMap.remove(operation.identifier());
 
+    m_currentlyCompletingRequest = nullptr;
+    
     IDBError error(IDBDatabaseException::AbortError);
-    for (auto& operation : m_abortQueue)
-        operation->completed(IDBResultData::error(operation->identifier(), error));
+    for (auto& operation : m_abortQueue) {
+        m_currentlyCompletingRequest = nullptr;
+        operation->doComplete(IDBResultData::error(operation->identifier(), error));
+    }
 
     // Since we're aborting, it should be impossible to have queued any further operations.
-    ASSERT(m_transactionOperationQueue.isEmpty());
+    ASSERT(m_pendingTransactionOperationQueue.isEmpty());
 }
 
 const char* IDBTransaction::activeDOMObjectName() const
@@ -339,30 +345,30 @@ void IDBTransaction::scheduleOperation(RefPtr<IDBClient::TransactionOperation>&&
     ASSERT(!m_transactionOperationMap.contains(operation->identifier()));
     ASSERT(currentThread() == m_database->originThreadID());
 
-    m_transactionOperationQueue.append(operation);
+    m_pendingTransactionOperationQueue.append(operation);
     m_transactionOperationMap.set(operation->identifier(), WTFMove(operation));
 
-    scheduleOperationTimer();
+    schedulePendingOperationTimer();
 }
 
-void IDBTransaction::scheduleOperationTimer()
+void IDBTransaction::schedulePendingOperationTimer()
 {
     ASSERT(currentThread() == m_database->originThreadID());
 
-    if (!m_operationTimer.isActive())
-        m_operationTimer.startOneShot(0);
+    if (!m_pendingOperationTimer.isActive())
+        m_pendingOperationTimer.startOneShot(0);
 }
 
-void IDBTransaction::operationTimerFired()
+void IDBTransaction::pendingOperationTimerFired()
 {
-    LOG(IndexedDB, "IDBTransaction::operationTimerFired (%p)", this);
+    LOG(IndexedDB, "IDBTransaction::pendingOperationTimerFired (%p)", this);
     ASSERT(currentThread() == m_database->originThreadID());
 
     if (!m_startedOnServer)
         return;
 
-    if (!m_transactionOperationQueue.isEmpty()) {
-        auto operation = m_transactionOperationQueue.takeFirst();
+    if (!m_pendingTransactionOperationQueue.isEmpty()) {
+        auto operation = m_pendingTransactionOperationQueue.takeFirst();
         operation->perform();
 
         return;
@@ -373,6 +379,67 @@ void IDBTransaction::operationTimerFired()
 
     if (!isFinishedOrFinishing())
         commit();
+}
+
+void IDBTransaction::operationCompletedOnServer(const IDBResultData& data, IDBClient::TransactionOperation& operation)
+{
+    ASSERT(currentThread() == m_database->originThreadID());
+    ASSERT(currentThread() == operation.originThreadID());
+
+    m_completedOnServerQueue.append({ &operation, data });
+    scheduleCompletedOperationTimer();
+}
+
+void IDBTransaction::scheduleCompletedOperationTimer()
+{
+    ASSERT(currentThread() == m_database->originThreadID());
+
+    if (!m_completedOperationTimer.isActive())
+        m_completedOperationTimer.startOneShot(0);
+}
+
+void IDBTransaction::completedOperationTimerFired()
+{
+    LOG(IndexedDB, "IDBTransaction::completedOperationTimerFired (%p)", this);
+    ASSERT(currentThread() == m_database->originThreadID());
+
+    if (m_completedOnServerQueue.isEmpty() || m_currentlyCompletingRequest)
+        return;
+
+    auto iterator = m_completedOnServerQueue.takeFirst();
+    iterator.first->doComplete(iterator.second);
+
+    if (!m_completedOnServerQueue.isEmpty() && !m_currentlyCompletingRequest)
+        scheduleCompletedOperationTimer();
+}
+
+void IDBTransaction::completeNoncursorRequest(IDBRequest& request, const IDBResultData& result)
+{
+    ASSERT(!m_currentlyCompletingRequest);
+
+    request.completeRequestAndDispatchEvent(result);
+
+    m_currentlyCompletingRequest = &request;
+}
+
+void IDBTransaction::completeCursorRequest(IDBRequest& request, const IDBResultData& result)
+{
+    ASSERT(!m_currentlyCompletingRequest);
+
+    request.didOpenOrIterateCursor(result);
+
+    m_currentlyCompletingRequest = &request;
+}
+
+void IDBTransaction::finishedDispatchEventForRequest(IDBRequest& request)
+{
+    if (isFinishedOrFinishing())
+        return;
+
+    ASSERT_UNUSED(request, !m_currentlyCompletingRequest || m_currentlyCompletingRequest == &request);
+
+    m_currentlyCompletingRequest = nullptr;
+    scheduleCompletedOperationTimer();
 }
 
 void IDBTransaction::commit()
@@ -422,7 +489,7 @@ void IDBTransaction::didStart(const IDBError& error)
         return;
     }
 
-    scheduleOperationTimer();
+    schedulePendingOperationTimer();
 }
 
 void IDBTransaction::notifyDidAbort(const IDBError& error)
@@ -724,7 +791,7 @@ void IDBTransaction::didOpenCursorOnServer(IDBRequest& request, const IDBResultD
     LOG(IndexedDB, "IDBTransaction::didOpenCursorOnServer");
     ASSERT(currentThread() == m_database->originThreadID());
 
-    request.didOpenOrIterateCursor(resultData);
+    completeCursorRequest(request, resultData);
 }
 
 void IDBTransaction::iterateCursor(IDBCursor& cursor, const IDBIterateCursorData& data)
@@ -753,7 +820,7 @@ void IDBTransaction::didIterateCursorOnServer(IDBRequest& request, const IDBResu
     LOG(IndexedDB, "IDBTransaction::didIterateCursorOnServer");
     ASSERT(currentThread() == m_database->originThreadID());
 
-    request.didOpenOrIterateCursor(resultData);
+    completeCursorRequest(request, resultData);
 }
 
 Ref<IDBRequest> IDBTransaction::requestGetAllObjectStoreRecords(JSC::ExecState& state, IDBObjectStore& objectStore, const IDBKeyRangeData& keyRangeData, IndexedDB::GetAllType getAllType, std::optional<uint32_t> count)
@@ -806,7 +873,7 @@ void IDBTransaction::didGetAllRecordsOnServer(IDBRequest& request, const IDBResu
     ASSERT(currentThread() == m_database->originThreadID());
 
     if (resultData.type() == IDBResultType::Error) {
-        request.requestCompleted(resultData);
+        completeNoncursorRequest(request, resultData);
         return;
     }
 
@@ -822,7 +889,7 @@ void IDBTransaction::didGetAllRecordsOnServer(IDBRequest& request, const IDBResu
         break;
     }
 
-    request.requestCompleted(resultData);
+    completeNoncursorRequest(request, resultData);
 }
 
 Ref<IDBRequest> IDBTransaction::requestGetRecord(ExecState& state, IDBObjectStore& objectStore, const IDBGetRecordData& getRecordData)
@@ -890,7 +957,7 @@ void IDBTransaction::didGetRecordOnServer(IDBRequest& request, const IDBResultDa
     ASSERT(currentThread() == m_database->originThreadID());
 
     if (resultData.type() == IDBResultType::Error) {
-        request.requestCompleted(resultData);
+        completeNoncursorRequest(request, resultData);
         return;
     }
 
@@ -910,7 +977,7 @@ void IDBTransaction::didGetRecordOnServer(IDBRequest& request, const IDBResultDa
             request.setResultToUndefined();
     }
 
-    request.requestCompleted(resultData);
+    completeNoncursorRequest(request, resultData);
 }
 
 Ref<IDBRequest> IDBTransaction::requestCount(ExecState& state, IDBObjectStore& objectStore, const IDBKeyRangeData& range)
@@ -961,7 +1028,7 @@ void IDBTransaction::didGetCountOnServer(IDBRequest& request, const IDBResultDat
     ASSERT(currentThread() == m_database->originThreadID());
 
     request.setResult(resultData.resultInteger());
-    request.requestCompleted(resultData);
+    completeNoncursorRequest(request, resultData);
 }
 
 Ref<IDBRequest> IDBTransaction::requestDeleteRecord(ExecState& state, IDBObjectStore& objectStore, const IDBKeyRangeData& range)
@@ -994,7 +1061,7 @@ void IDBTransaction::didDeleteRecordOnServer(IDBRequest& request, const IDBResul
     ASSERT(currentThread() == m_database->originThreadID());
 
     request.setResultToUndefined();
-    request.requestCompleted(resultData);
+    completeNoncursorRequest(request, resultData);
 }
 
 Ref<IDBRequest> IDBTransaction::requestClearObjectStore(ExecState& state, IDBObjectStore& objectStore)
@@ -1028,7 +1095,7 @@ void IDBTransaction::didClearObjectStoreOnServer(IDBRequest& request, const IDBR
     ASSERT(currentThread() == m_database->originThreadID());
 
     request.setResultToUndefined();
-    request.requestCompleted(resultData);
+    completeNoncursorRequest(request, resultData);
 }
 
 Ref<IDBRequest> IDBTransaction::requestPutOrAdd(ExecState& state, IDBObjectStore& objectStore, IDBKey* key, SerializedScriptValue& value, IndexedDB::ObjectStoreOverwriteMode overwriteMode)
@@ -1074,7 +1141,7 @@ void IDBTransaction::putOrAddOnServer(IDBClient::TransactionOperation& operation
             RefPtr<IDBClient::TransactionOperation> protectedOperation(&operation);
             auto result = IDBResultData::error(operation.identifier(), { IDBDatabaseException::UnknownError, ASCIILiteral("Error preparing Blob/File data to be stored in object store") });
             scriptExecutionContext()->postTask([protectedOperation = WTFMove(protectedOperation), result = WTFMove(result)](ScriptExecutionContext&) {
-                protectedOperation->completed(result);
+                protectedOperation->doComplete(result);
             });
         }
         return;
@@ -1092,7 +1159,7 @@ void IDBTransaction::putOrAddOnServer(IDBClient::TransactionOperation& operation
         // In that case, we cannot successfully store this record, so we callback with an error.
         auto result = IDBResultData::error(protectedOperation->identifier(), { IDBDatabaseException::UnknownError, ASCIILiteral("Error preparing Blob/File data to be stored in object store") });
         callOnMainThread([protectedThis = WTFMove(protectedThis), protectedOperation = WTFMove(protectedOperation), result = WTFMove(result)]() mutable {
-            protectedOperation->completed(result);
+            protectedOperation->doComplete(result);
         });
     });
 }
@@ -1106,7 +1173,7 @@ void IDBTransaction::didPutOrAddOnServer(IDBRequest& request, const IDBResultDat
         request.setResult(*result);
     else
         request.setResultToUndefined();
-    request.requestCompleted(resultData);
+    completeNoncursorRequest(request, resultData);
 }
 
 void IDBTransaction::deleteObjectStore(const String& objectStoreName)
@@ -1167,15 +1234,17 @@ void IDBTransaction::didDeleteIndexOnServer(const IDBResultData& resultData)
     ASSERT_UNUSED(resultData, resultData.type() == IDBResultType::DeleteIndexSuccess || resultData.type() == IDBResultType::Error);
 }
 
-void IDBTransaction::operationDidComplete(IDBClient::TransactionOperation& operation)
+void IDBTransaction::operationCompletedOnClient(IDBClient::TransactionOperation& operation)
 {
+    LOG(IndexedDB, "IDBTransaction::operationCompletedOnClient");
+
     ASSERT(m_transactionOperationMap.get(operation.identifier()) == &operation);
     ASSERT(currentThread() == m_database->originThreadID());
     ASSERT(currentThread() == operation.originThreadID());
 
     m_transactionOperationMap.remove(operation.identifier());
 
-    scheduleOperationTimer();
+    schedulePendingOperationTimer();
 }
 
 void IDBTransaction::establishOnServer()
@@ -1203,7 +1272,7 @@ void IDBTransaction::deactivate()
     if (m_state == IndexedDB::TransactionState::Active)
         m_state = IndexedDB::TransactionState::Inactive;
 
-    scheduleOperationTimer();
+    schedulePendingOperationTimer();
 }
 
 void IDBTransaction::connectionClosedFromServer(const IDBError& error)
@@ -1215,12 +1284,14 @@ void IDBTransaction::connectionClosedFromServer(const IDBError& error)
     Vector<RefPtr<IDBClient::TransactionOperation>> operations;
     copyValuesToVector(m_transactionOperationMap, operations);
 
-    for (auto& operation : operations)
-        operation->completed(IDBResultData::error(operation->identifier(), error));
+    for (auto& operation : operations) {
+        m_currentlyCompletingRequest = nullptr;
+        operation->doComplete(IDBResultData::error(operation->identifier(), error));
+    }
 
     connectionProxy().forgetActiveOperations(operations);
 
-    m_transactionOperationQueue.clear();
+    m_pendingTransactionOperationQueue.clear();
     m_abortQueue.clear();
     m_transactionOperationMap.clear();
 
